SERVER-47151 Move batch_downconvert and tests to be only in 'sharding_commands'

--- a/src/mongo/s/commands/SConscript
+++ b/src/mongo/s/commands/SConscript
@@ -22,6 +22,7 @@ env.Library(
 env.Library(
     target='cluster_commands',
     source=[
+        'batch_downconvert.cpp',
         'cluster_abort_transaction_cmd.cpp',
         'cluster_add_shard_cmd.cpp',
         'cluster_add_shard_to_zone_cmd.cpp',
@@ -45,8 +46,8 @@ env.Library(
         'cluster_drop_database_cmd.cpp',
         'cluster_drop_indexes_cmd.cpp',
         'cluster_enable_sharding_cmd.cpp',
-        'cluster_explain.cpp',
         'cluster_explain_cmd.cpp',
+        'cluster_explain.cpp',
         'cluster_filemd5_cmd.cpp',
         'cluster_find_and_modify_cmd.cpp',
         'cluster_find_cmd.cpp',
@@ -79,9 +80,9 @@ env.Library(
         'cluster_repl_set_get_status_cmd.cpp',
         'cluster_reset_error_cmd.cpp',
         'cluster_rwc_defaults_commands.cpp',
-        'cluster_set_index_commit_quorum_cmd.cpp',
         'cluster_set_feature_compatibility_version_cmd.cpp',
         'cluster_set_free_monitoring.cpp' if get_option("enable-free-mon") == 'on' else [],
+        'cluster_set_index_commit_quorum_cmd.cpp',
         'cluster_shard_collection_cmd.cpp',
         'cluster_shutdown_cmd.cpp',
         'cluster_split_cmd.cpp',
@@ -135,7 +136,6 @@ env.Library(
         '$BUILD_DIR/mongo/s/sharding_api',
         '$BUILD_DIR/mongo/s/sharding_legacy_api',
         '$BUILD_DIR/mongo/s/sharding_router_api',
-        '$BUILD_DIR/mongo/s/write_ops/cluster_write_op_conversion',
         '$BUILD_DIR/mongo/transport/message_compressor',
         '$BUILD_DIR/mongo/transport/transport_layer_common',
         'shared_cluster_commands',
