--- a/buildscripts/resmokeconfig/suites/causally_consistent_hedged_reads_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/causally_consistent_hedged_reads_jscore_passthrough.yml
@@ -4,7 +4,7 @@ selector:
   roots:
   - jstests/core/**/*.js
   exclude_files:
-  # In MongoDB 4.0, transactions are not supported in sharded clusters.
+  # Don't run these tests as transactions can only run on primaries.
   - jstests/core/txns/**/*.js
   # Cannot specify afterClusterTime and afterOpTime.
   - jstests/core/read_after_optime.js
