--- a/buildscripts/resmokeconfig/suites/change_streams_whole_cluster_sharded_collections_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/change_streams_whole_cluster_sharded_collections_passthrough.yml
@@ -15,10 +15,11 @@ selector:
   ##
   # "Cowardly refusing to override write concern of command: ..."
   - assumes_write_concern_unchanged
-  # Transactions not supported on sharded clusters.
-  - uses_transactions
   # Not relevant for whole-cluster change streams.
   - do_not_run_in_whole_cluster_passthrough
+  # Exclude any that assume sharding is disabled
+  - assumes_against_mongod_not_mongos
+  - assumes_unsharded_collection
 
 executor:
   archive:
