SERVER-45835 Add optimized Linkbench to Sys-perf as a new task
(cherry picked from commit cac63cab472d04b46b691e52e014aa621939a418)

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -239,6 +239,7 @@ functions:
                 workloads: ../src/workloads/workloads
                 ycsb: ../src/YCSB/YCSB
                 linkbench: ../src/linkbench/linkbench
+                linkbench2: ../src/linkbench2/linkbench2
                 tpcc: ../src/tpcc/tpcc
                 genny: ../src/genny/genny
             mongodb_setup:
@@ -419,6 +420,18 @@ tasks:
     - func: "prepare environment"
       vars:
         test: "linkbench"
+    - func: "deploy cluster"
+    - func: "run test"
+    - func: "analyze"
+
+- name: linkbench2
+  priority: 5
+  exec_timeout_secs: 43200 # 12 hours
+  commands:
+    - func: "prepare environment"
+      vars:
+        test: "linkbench2"
+        additional_tfvars: "tags: {expire-on-delta: 12}"
     - func: "deploy cluster"
     - func: "run test"
     - func: "analyze"
@@ -990,6 +1003,7 @@ buildvariants:
     - name: change_streams_latency
     - name: snapshot_reads
     - name: linkbench
+    - name: linkbench2
     - name: tpcc
     - name: insert_remove
     - name: big_update
@@ -1208,6 +1222,7 @@ buildvariants:
     - name: secondary_reads
     - name: tpcc
     - name: linkbench
+    - name: linkbench2
     - name: big_update
     - name: sb_large_scale
     - name: sb_timeseries
@@ -1240,6 +1255,7 @@ buildvariants:
     - name: change_streams_latency
     - name: tpcc
     - name: linkbench
+    - name: linkbench2
     - name: big_update
 
 - name: linux-3-node-replSet-ssl
