--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -9962,7 +9962,7 @@ buildvariants:
   - name: lint_yaml
   - name: lint_errorcodes
   - name: burn_in_tests_gen
-  - name: burn_in_tests_multiversion_gen
+# - name: burn_in_tests_multiversion_gen
   - name: .aggfuzzer
   - name: .aggregation
   - name: audit
