SERVER-47341 Mark sources read only during scons compile
Also, validate the presence of the file that goes missing before
and after the build. That way we have some idea of whether the file
was deleted by SCons (or concurrently with SCons) or by some other
task running in between SCons runs.

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -1888,10 +1888,17 @@ functions:
 
         ${activate_virtualenv}
 
+        chmod -R ugo-w ./src
+        ls -la src/mongo/stdx/sigaltstack_location_test.cpp || true
+
         ${compile_env|} $python ./buildscripts/scons.py                                     \
             ${compile_flags|} ${task_compile_flags|} ${task_compile_flags_extra|}           \
             ${scons_cache_args|} $extra_args                                                \
             ${targets} MONGO_VERSION=${version} || exit_status=$?
+
+        chmod -R ugo+w ./src
+        ls -la src/mongo/stdx/sigaltstack_location_test.cpp || true
+
         # If compile fails we do not run any tests
         if [[ $exit_status -ne 0 ]]; then
           if [[ "${dump_scons_config_on_failure}" == true ]]; then
