--- a/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
@@ -6,8 +6,12 @@ selector:
   - jstests/sharding/change_streams/*.js
   - jstests/sharding/query/*.js
   exclude_files:
-  # Auth tests require authentication on the stepdown thread's connection
-  - jstests/sharding/auth*.js
+    # Skip any tests that run with auth explicitly.
+    # Auth tests require authentication on the stepdown thread's connection
+  - jstests/sharding/*[aA]uth*.js
+  - jstests/sharding/query/*[aA]uth*.js
+  - jstests/sharding/change_streams/*[aA]uth*.js
+
   - jstests/sharding/cleanup_orphaned_auth.js
   - jstests/sharding/localhostAuthBypass.js
   - jstests/sharding/kill_sessions.js
