SERVER-44787 Make migrationId in StartChunkCloneRequest non-optional after 4.4 release

--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -30,6 +30,8 @@ selector:
   - jstests/sharding/test_stacked_migration_cleanup.js
   - jstests/sharding/killop.js
   - jstests/sharding/verify_sessions_expiration_sharded.js
+  # Enable when 4.6 becomes last stable
+  - jstests/sharding/disable_resumable_range_deleter_flag.js
   # Enable when SERVER-44733 is backported
   - jstests/sharding/change_streams_update_lookup_shard_metadata_missing.js
   # Enable when SERVER-43310 is backported
