SERVER-47436 Make shards validate shardKey in dataSize command
(cherry picked from commit 59e005fea0e1ca575083ded8c02c518048fb8af0)

--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -149,6 +149,8 @@ selector:
   - jstests/sharding/server_status.js
   # Enable after SERVER-31083 is backported and available on 4.2 and 4.0 binaries
   - jstests/sharding/enable_sharding_with_primary.js
+  # SERVER-47534: Unblacklist mongos_dataSize.js from sharding_last_stable_mongos_and_mixed_shards suite.
+  - jstests/sharding/mongos_dataSize.js
   # Enable when SERVER-44733 is backported
   - jstests/sharding/change_streams_update_lookup_shard_metadata_missing.js
   # Enable if SERVER-43310 is backported to 4.0
