SERVER-47436 Make shards validate shardKey in dataSize command
(cherry picked from commit 59e005fea0e1ca575083ded8c02c518048fb8af0)
(cherry picked from commit 20364840b8f1af16917e4c23c1b5f5efd8b352f8)

--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -82,6 +82,8 @@ selector:
   - jstests/sharding/clear_jumbo.js
   # Requires count command to be accurate on sharded clusters, introduced in v4.0.
   - jstests/sharding/accurate_count_with_predicate.js
+  # Requires that dataSize command uses shard versioning, introduced in v4.0.
+  - jstests/sharding/mongos_dataSize.js
   # The 3.6 mongos does not support using localOps to find failpoints.
   - jstests/sharding/verify_sessions_expiration_sharded.js
   # Enable when SERVER-33538 is backported.
