--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -9990,7 +9990,7 @@ buildvariants:
   - enterprise
   run_on:
   - rhel62-small
-  expansions:
+  expansions: &enterprise-rhel-62-64-bit-expansions
     additional_targets: archive-mongocryptd archive-mongocryptd-debug
     push_path: linux
     push_bucket: downloads.10gen.com
@@ -10458,6 +10458,48 @@ buildvariants:
     - name: .sharding .common
     - name: snmp
     - name: .updatefuzzer
+
+# The following build variant is meant to provide a baseline to measure how much overhead we
+# are spending when we split tasks into multiple sub-tasks.
+- name: enterprise-rhel-62-64-bit-single-task-baseline
+  display_name: "Enterprise RHEL 6.2 (Single Task Baseline)"
+  batchtime: 10080  # 1 week.
+  modules:
+    - enterprise
+  run_on:
+    - rhel62-small
+  expansions:
+    <<: *enterprise-rhel-62-64-bit-expansions
+    max_sub_suites: 1  # Only generate 1 sub-suite per task.
+  tasks:
+    - name: compile_all_run_unittests_TG
+      distros:
+        - rhel62-large
+    - name: .aggregation
+    - name: .auth
+    - name: unittest_shell_hang_analyzer_gen
+    - name: .causally_consistent !.sharding
+    - name: .change_streams
+    - name: .misc_js
+    - name: .encrypt
+    - name: .jscore .common
+    - name: .logical_session_cache
+    - name: .multi_shard
+    - name: multi_stmt_txn_jscore_passthrough_with_migration_gen
+    - name: multiversion_gen
+    - name: .read_write_concern .large
+      distros:
+        - rhel62-large
+    - name: .read_write_concern !.large
+    - name: .replica_sets !.encrypt !.auth
+      distros:
+        - rhel62-large
+    - name: retryable_writes_jscore_passthrough_gen
+    - name: .read_only
+    - name: .sharding .jscore !.wo_snapshot !.multi_stmt
+    - name: .sharding .txns
+    - name: .sharding .common
+    - name: secondary_reads_passthrough_gen
 
 - &enterprise-rhel-70-64-bit-template
   name: enterprise-rhel-70-64-bit
