SERVER-47089 Create IDL for ReplSetConfig "settings" object.

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -795,10 +795,12 @@ env.Library('replica_set_messages',
                 'is_master_response.cpp',
                 'member_config.cpp',
                 'repl_set_config.cpp',
+                'repl_set_config_validators.cpp',
                 'repl_set_heartbeat_args_v1.cpp',
                 'repl_set_heartbeat_response.cpp',
                 'repl_set_request_votes_args.cpp',
                 'repl_set_tag.cpp',
+                'repl_set_write_concern_mode_definitions.cpp',
                 'update_position_args.cpp',
                 'last_vote.cpp',
                 env.Idlc('repl_set_config.idl')[0],
@@ -1245,6 +1247,7 @@ env.CppUnitTest(
         'repl_set_config_test.cpp',
         'repl_set_heartbeat_response_test.cpp',
         'repl_set_tag_test.cpp',
+        'repl_set_write_concern_mode_definitions_test.cpp',
         'replication_consistency_markers_impl_test.cpp',
         'replication_process_test.cpp',
         'replication_recovery_test.cpp',
