--- a/src/mongo/client/SConscript
+++ b/src/mongo/client/SConscript
@@ -328,7 +328,7 @@ env.CppUnitTest(
         'mongo_uri_test.cpp',
         'read_preference_test.cpp',
         'remote_command_retry_scheduler_test.cpp',
-        'replica_set_monitor_server_parameters_test.cpp', 
+        'replica_set_monitor_server_parameters_test.cpp',
         'scanning_replica_set_monitor_internal_test.cpp',
         'scanning_replica_set_monitor_read_preference_test.cpp',
         'scanning_replica_set_monitor_scan_test.cpp',
@@ -361,6 +361,23 @@ env.CppUnitTest(
         'read_preference',
         'remote_command_retry_scheduler',
         'replica_set_monitor_protocol_test_util',
+    ],
+)
+
+env.CppIntegrationTest(
+    target='replica_set_monitor_integration_test',
+    source=[
+        'replica_set_monitor_integration_test.cpp',
+    ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/client/clientdriver_network',
+        '$BUILD_DIR/mongo/db/wire_version',
+        '$BUILD_DIR/mongo/executor/network_interface_factory',
+        '$BUILD_DIR/mongo/executor/network_interface_thread_pool',
+        '$BUILD_DIR/mongo/executor/thread_pool_task_executor',
+        '$BUILD_DIR/mongo/transport/transport_layer_egress_init',
+        '$BUILD_DIR/mongo/util/concurrency/thread_pool',
+        '$BUILD_DIR/mongo/util/version_impl',
     ],
 )
 
