--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -383,6 +383,7 @@ env.CppUnitTest(
         'expression_date_test.cpp',
         'expression_field_path_test.cpp',
         'expression_find_internal_test.cpp',
+        'expression_internal_remove_field_tombstones_test.cpp',
         'expression_javascript_test.cpp',
         'expression_nary_test.cpp',
         'expression_object_test.cpp',
