SERVER-47428 Move concurrency_sharded* tasks to -large distros.
Not all build variants run the concurrency* tasks with the "large" task
tag on a -large distro. The RHEL 6.2 and SUSE 12 build variants were
specifically modified to do so because OOM failures have been observed
on them.

(cherry picked from commit 6202c52a254ced5238eaf7f77117f7c4865aed56)

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -6614,7 +6614,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_replication
-  tags: ["concurrency", "common", "read_concern_maj"]
+  tags: ["concurrency", "common", "read_concern_maj", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6636,7 +6636,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_replication_with_balancer
-  tags: ["concurrency", "common", "read_concern_maj"]
+  tags: ["concurrency", "common", "read_concern_maj", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6647,7 +6647,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_replication_no_txns
-  tags: ["concurrency", "no_txns"]
+  tags: ["concurrency", "no_txns", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6658,7 +6658,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_replication_no_txns_with_balancer
-  tags: ["concurrency", "no_txns"]
+  tags: ["concurrency", "no_txns", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6669,7 +6669,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_clusterwide_ops_add_remove_shards
-  tags: ["concurrency", "common", "read_concern_maj"]
+  tags: ["concurrency", "common", "read_concern_maj", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6689,7 +6689,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_causal_consistency_and_balancer
-  tags: ["concurrency"]
+  tags: ["concurrency", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6700,7 +6700,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_with_stepdowns
-  tags: ["concurrency", "stepdowns"]
+  tags: ["concurrency", "stepdowns", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6711,7 +6711,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_with_stepdowns_and_balancer
-  tags: ["concurrency", "stepdowns"]
+  tags: ["concurrency", "stepdowns", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6722,7 +6722,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_terminate_primary_with_balancer
-  tags: ["concurrency", "stepdowns", "kill_terminate"]
+  tags: ["concurrency", "stepdowns", "kill_terminate", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6733,7 +6733,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_kill_primary_with_balancer
-  tags: ["concurrency", "stepdowns", "kill_terminate"]
+  tags: ["concurrency", "stepdowns", "kill_terminate", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6744,7 +6744,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_multi_stmt_txn
-  tags: ["concurrency"]
+  tags: ["concurrency", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6754,7 +6754,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_multi_stmt_txn_with_balancer
-  tags: ["concurrency"]
+  tags: ["concurrency", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6764,7 +6764,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_local_read_write_multi_stmt_txn
-  tags: ["concurrency"]
+  tags: ["concurrency", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6774,7 +6774,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_local_read_write_multi_stmt_txn_with_balancer
-  tags: ["concurrency"]
+  tags: ["concurrency", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6784,7 +6784,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_multi_stmt_txn_with_stepdowns
-  tags: ["concurrency", "stepdowns"]
+  tags: ["concurrency", "stepdowns", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6794,7 +6794,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_multi_stmt_txn_terminate_primary
-  tags: ["concurrency", "stepdowns", "kill_terminate"]
+  tags: ["concurrency", "stepdowns", "kill_terminate", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -6804,7 +6804,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_sharded_multi_stmt_txn_kill_primary
-  tags: ["concurrency", "stepdowns", "kill_terminate"]
+  tags: ["concurrency", "stepdowns", "kill_terminate", "large"]
   commands:
   - func: "do setup"
   - func: "run tests"
@@ -9939,15 +9939,35 @@ buildvariants:
   - name: concurrency_replication
   - name: concurrency_replication_multi_stmt_txn
   - name: concurrency_sharded_replication
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_replication_with_balancer
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_clusterwide_ops_add_remove_shards
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_local_read_write_multi_stmt_txn
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_local_read_write_multi_stmt_txn_with_balancer
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_multi_stmt_txn
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_multi_stmt_txn_with_balancer
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_multi_stmt_txn_with_stepdowns
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_with_stepdowns
+    distros:
+    - rhel62-large
   - name: concurrency_sharded_with_stepdowns_and_balancer
+    distros:
+    - rhel62-large
   - name: initial_sync_fuzzer_gen
   - name: jsCore
   - name: jsCore_txns
@@ -10014,6 +10034,8 @@ buildvariants:
   - name: .concurrency .no_txns
   - name: concurrency_sharded_causal_consistency_gen
   - name: concurrency_sharded_causal_consistency_and_balancer
+    distros:
+    - rhel62-large
   - name: concurrency_replication_causal_consistency
     distros:
     - rhel62-large
@@ -10521,7 +10543,10 @@ buildvariants:
   - name: .auth !.multiversion !.audit
   - name: causally_consistent_jscore_txns_passthrough
   - name: .misc_js
-  - name: .concurrency .common
+  - name: .concurrency .common !.large
+  - name: .concurrency .common .large
+    distros:
+      - rhel62-large
   - name: concurrency_replication_causal_consistency
     distros:
       - rhel62-large
@@ -11127,7 +11152,10 @@ buildvariants:
   - name: .auth !.audit !.multiversion
   - name: causally_consistent_jscore_txns_passthrough
   - name: .misc_js
-  - name: .concurrency .common
+  - name: .concurrency .common !.large
+  - name: .concurrency .common .large
+    distros:
+      - suse12-build
   - name: concurrency_replication_causal_consistency
     distros:
       - suse12-build
