--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -61,6 +61,8 @@ replica_sets_multiversion:
   test_file: jstests/replsets/reconfig_uses_default_protocolVersion.js
 - ticket: SERVER-44500
   test_file: jstests/replsets/apply_ops_inserts_do_not_include_fromMigrate_field.js
+- ticket: SERVER-47190
+  test_file: jstests/replsets/force_shutdown_primary.js
 
 sharding_multiversion:
 - ticket: SERVER-38691
