SERVER-47190: Shutdown command with force:true should ignore all stepdown errors
(cherry picked from commit 1563ac389bdcb08aadeb31705b2cc123742b739b)
(cherry picked from commit f60e93dd7ff8c7c9876d54e9c3c66b141eb32f03)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -55,6 +55,8 @@ replica_sets_multiversion:
   test_file: jstests/replsets/rollback_via_refetch_update_rollback_id_before_oplog_truncation.js
 - ticket: SERVER-45143
   test_file: jstests/replsets/reconfig_uses_default_protocolVersion.js
+- ticket: SERVER-47190
+  test_file: jstests/replsets/force_shutdown_primary.js
 
 sharding_multiversion:
 - ticket: SERVER-38691
